[gd_scene load_steps=19 format=3 uid="uid://dbs4uy1a3a52t"]

[ext_resource type="Script" path="res://scripts/screen_pauseSP.gd" id="1_nufqp"]
[ext_resource type="Texture2D" uid="uid://sd3g2yiuqsxo" path="res://assets/images/Pause Menu(1).png" id="2_35o2t"]
[ext_resource type="Texture2D" uid="uid://cftlx8ptukwu6" path="res://assets/images/Player Icons_black 1.png" id="3_jv2fk"]
[ext_resource type="FontFile" uid="uid://dv2ohq4ljb4sa" path="res://kenvector_future.ttf" id="4_o7fta"]
[ext_resource type="StyleBox" uid="uid://ccqgv0dsve6l0" path="res://assets/styleBox/logIn_button_hover.tres" id="5_3g15k"]
[ext_resource type="StyleBox" uid="uid://dsmipxadgfpou" path="res://assets/styleBox/logIn_button_normal.tres" id="6_2t0eg"]
[ext_resource type="Script" path="res://scripts/reset_settings.gd" id="7_l0g85"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="8_xl01i"]
[ext_resource type="Script" path="res://scripts/main_settings.gd" id="9_o8cbf"]
[ext_resource type="Script" path="res://scripts/audio_settings.gd" id="10_hr63n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rx1hg"]
bg_color = Color(0.729412, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0uf2"]
bg_color = Color(0.729412, 0.215686, 0.215686, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.729412, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3io2"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.85098, 0.85098, 0.85098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtxw5"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.239216, 0.239216, 0.239216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yfjnn"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.239216, 0.239216, 0.239216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kr6o"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0xw5"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.239216, 0.239216, 0.239216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5c47e"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.85098, 0.85098, 0.85098, 1)

[node name="ScreenPause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nufqp")

[node name="PauseOverlay" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -36.0
offset_right = 268.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="TextureRect2" type="TextureRect" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_35o2t")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -365.0
offset_right = 240.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="TextureRect" type="TextureRect" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_jv2fk")
stretch_mode = 3

[node name="resume" type="Button" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_o7fta")
theme_override_font_sizes/font_size = 34
theme_override_styles/hover = ExtResource("5_3g15k")
theme_override_styles/normal = ExtResource("6_2t0eg")
text = "RESUME   "

[node name="settings" type="Button" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_o7fta")
theme_override_font_sizes/font_size = 34
theme_override_styles/hover = ExtResource("5_3g15k")
theme_override_styles/normal = ExtResource("6_2t0eg")
text = "SETTINGS   "

[node name="leave" type="Button" parent="PauseOverlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_o7fta")
theme_override_font_sizes/font_size = 34
theme_override_styles/hover = ExtResource("5_3g15k")
theme_override_styles/normal = ExtResource("6_2t0eg")
text = "LEAVE"

[node name="SettingsOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
script = ExtResource("7_l0g85")

[node name="MainMenuDimming" type="ColorRect" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="TabContainer" type="TabContainer" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 593.0
offset_top = 295.0
offset_right = 1375.0
offset_bottom = 789.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_unselected_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_hovered_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 35
theme_override_styles/panel = SubResource("StyleBoxFlat_rx1hg")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_q0uf2")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_n3io2")
current_tab = 0

[node name="MainSettings" type="TabBar" parent="SettingsOverlay/TabContainer"]
layout_mode = 2
script = ExtResource("9_o8cbf")
metadata/_tab_index = 0

[node name="HorzontalAlign" type="HBoxContainer" parent="SettingsOverlay/TabContainer/MainSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 12.0
offset_right = -49.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="VLabels" type="VBoxContainer" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="Display" type="Label" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VLabels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gtxw5")
text = "Display"

[node name="Resolution" type="Label" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VLabels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_yfjnn")
text = "Resolution"

[node name="VSync" type="Label" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VLabels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_yfjnn")
text = "VSync"

[node name="VSettings" type="VBoxContainer" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="DisplayOption" type="OptionButton" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VSettings"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_hover_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_pressed_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_focus_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxFlat_7kr6o")
theme_override_styles/normal = SubResource("StyleBoxFlat_7kr6o")
selected = 0
item_count = 3
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="ResolutionOptions" type="OptionButton" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VSettings"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_focus_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7kr6o")
selected = 0
item_count = 2
popup/item_0/text = "1920x1080"
popup/item_1/text = "1152x648"
popup/item_1/id = 1

[node name="VSyncOptions" type="OptionButton" parent="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VSettings"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_pressed_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7kr6o")
selected = 0
item_count = 2
popup/item_0/text = "Enabled"
popup/item_1/text = "Disabled"
popup/item_1/id = 1

[node name="AudioSettings" type="TabBar" parent="SettingsOverlay/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("10_hr63n")
metadata/_tab_index = 1

[node name="HorizontalAlign" type="HBoxContainer" parent="SettingsOverlay/TabContainer/AudioSettings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_top = 17.0
offset_right = -40.0
offset_bottom = 190.0
grow_horizontal = 2
alignment = 1

[node name="VLabels" type="VBoxContainer" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
alignment = 1

[node name="Master" type="Label" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VLabels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_j0xw5")
text = "Master Volume"

[node name="Music" type="Label" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VLabels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_j0xw5")
text = "Music Volume"

[node name="SFX" type="Label" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VLabels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_j0xw5")
text = "SFX Volume"

[node name="VSettings" type="VBoxContainer" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[node name="MsterSlider" type="HSlider" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VSettings"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="MusicSlider" type="HSlider" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VSettings"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SFXSlider" type="HSlider" parent="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VSettings"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="ResetButton" type="Button" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.667
anchor_right = 0.5
anchor_bottom = 0.667
offset_left = 815.5
offset_top = 702.0
offset_right = 1152.5
offset_bottom = 757.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("8_xl01i")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = ExtResource("5_3g15k")
theme_override_styles/normal = ExtResource("6_2t0eg")
text = "Reset Settings"

[node name="Close" type="Button" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.693
anchor_top = 0.384
anchor_right = 0.693
anchor_bottom = 0.384
offset_left = 1339.0
offset_top = 366.0
offset_right = 1378.0
offset_bottom = 415.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_5c47e")
text = "X"

[connection signal="item_selected" from="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VSettings/DisplayOption" to="SettingsOverlay/TabContainer/MainSettings" method="_on_display_option_item_selected"]
[connection signal="item_selected" from="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VSettings/ResolutionOptions" to="SettingsOverlay/TabContainer/MainSettings" method="_on_resolution_options_item_selected"]
[connection signal="item_selected" from="SettingsOverlay/TabContainer/MainSettings/HorzontalAlign/VSettings/VSyncOptions" to="SettingsOverlay/TabContainer/MainSettings" method="_on_v_sync_options_2_item_selected"]
[connection signal="value_changed" from="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VSettings/MsterSlider" to="SettingsOverlay/TabContainer/AudioSettings" method="_on_mster_slider_value_changed"]
[connection signal="value_changed" from="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VSettings/MusicSlider" to="SettingsOverlay/TabContainer/AudioSettings" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsOverlay/TabContainer/AudioSettings/HorizontalAlign/VSettings/SFXSlider" to="SettingsOverlay/TabContainer/AudioSettings" method="_on_sfx_slider_value_changed"]
